--- a/locales/lt.json
+++ b/locales/lt.json
@@ -68,4 +68,10 @@
     "admin_shopping_list_title": "🛒 Pirkinių sąrašas Lenkijai (agreguotos sumos):\n\n",
     "admin_shopping_list_item_format": "- {name}: {total_quantity:.2f} kg\n",
     "admin_panel_exit_message": "Išėjote iš administratoriaus skydelio."
+    "admin_new_order_notification_title": "🔔 Gautas naujas užsakymas Nr. {order_id}!",
+    "admin_order_from": "Užsakė: {name} (@{username}, ID: {customer_id})",
+    "admin_order_items_header": "Užsakymo informacija:",
+    "admin_order_item_line_format": "{index}. {item_name}: {quantity} kg x {price_per_kg:.2f} EUR/kg = {item_subtotal:.2f} EUR",
+    "admin_order_grand_total": "Bendra suma: {total_price:.2f} EUR"
+  
   }
