--- a/locales/en.json
+++ b/locales/en.json
@@ -1,76 +1,83 @@
 {
-    "welcome_message": "Hi {user_mention}! Welcome to the Polish Veggies & Fruits Bot!",
-    "main_menu_title": "Main Menu:",
-    "browse_products_button": "🥕 Browse Products & Order",
-    "view_cart_button": "🛒 View Cart",
-    "my_orders_button": "📋 My Orders",
-    "set_language_button": "🌐 Change Language",
-    "choose_language": "Please choose your language:",
-    "language_set_to": "Language set to {language_name}.",
-    "products_title": "Choose a product to add to your cart:",
-    "no_products_available": "Sorry, no products available at the moment. Check back later!",
-    "back_to_main_menu_button": "⬅️ Back to Main Menu",
-    "product_selected_prompt": "You selected: {product_name}. How many kg do you want? (e.g., 0.5, 1, 2.5)",
-    "invalid_quantity_prompt": "Invalid quantity. Please enter a positive number (e.g., 0.5, 1, 2.5).",
-    "item_added_to_cart": "{quantity} kg of {product_name} added to your cart.",
-    "what_next_prompt": "What would you like to do next?",
-    "add_more_products_button": "➕ Add More Products",
-    "view_cart_and_checkout_button": "🛒 View Cart & Checkout",
-    "cart_empty": "Your cart is empty.",
-    "your_cart_title": "🛒 Your Cart:",
-    "cart_total": "Total: {total_price:.2f} EUR",
-    "remove_item_button": "🗑️ Remove Item {item_index}",
-    "checkout_button": "✅ Checkout",
-    "order_placed_success": "✅ Order Placed!\nYour Order ID is: #{order_id}\nTotal: {total_price:.2f} EUR.\nWe will contact you regarding pickup/delivery details. Thank you!",
-    "order_placed_error": "Sorry, there was an error placing your order. Please try again.",
-    "my_orders_title": "📋 Your Orders:",
-    "no_orders_yet": "You have no past orders.",
-    "order_details_format": "Order #{order_id} ({date})\nStatus: {status}\nTotal: {total:.2f} EUR\nItems: {items}\n\n",
-    "item_removed_from_cart": "Removed {item_name} from your cart.",
-    "invalid_item_to_remove": "Invalid item to remove.",
-    "action_cancelled": "Action cancelled.",
-    "admin_unauthorized": "You are not authorized to access this section.",
-    "admin_panel_title": "Admin Panel:",
-    "admin_add_product_button": "➕ Add Product",
-    "admin_manage_products_button": "✏️ Manage Products",
-    "admin_view_orders_button": "📦 View All Orders",
-    "admin_shopping_list_button": "📊 Shopping List (Totals)",
-    "admin_exit_button": "⬅️ Exit Admin Panel",
-    "admin_enter_product_name": "Enter the name of the new product:",
-    "admin_enter_product_price": "Product name: {product_name}. Now enter its price per kg (e.g., 2.99):",
-    "admin_invalid_price": "Invalid price. Please enter a positive number (e.g., 2.99).",
-    "admin_product_added": "Product '{product_name}' added with price {price:.2f} EUR/kg.",
-    "admin_product_add_failed": "Failed to add product '{product_name}'. It might already exist.",
-    "admin_no_products_to_manage": "No products to manage.",
-    "admin_select_product_to_manage": "Select a product to manage:",
-    "admin_back_to_admin_panel_button": "⬅️ Back to Admin Panel",
-    "admin_managing_product": "Managing: {product_name}",
-    "admin_change_price_button": "Change Price ({price:.2f} EUR)",
-    "admin_set_unavailable_button": "Set Unavailable",
-    "admin_set_available_button": "Set Available",
-    "admin_delete_product_button": "❌ Delete Product",
-    "admin_back_to_product_list_button": "⬅️ Back to Product List",
-    "admin_product_not_found": "Product not found.",
-    "admin_enter_new_price": "Enter new price for {product_name} (current: {current_price:.2f} EUR/kg):",
-    "admin_price_updated": "Price updated for product ID {product_id}.",
-    "admin_price_update_failed": "Failed to update price.",
-    "admin_product_set_status": "Product ID {product_id} set to {status_text}.",
-    "admin_status_update_failed": "Failed to update availability.",
-    "admin_confirm_delete_prompt": "⚠️ Are you sure you want to delete {product_name}? This cannot be undone.",
-    "admin_confirm_delete_yes_button": "YES, Delete {product_name}",
-    "admin_confirm_delete_no_button": "NO, Cancel",
-    "admin_product_deleted": "Product ID {product_id} has been deleted.",
-    "admin_product_delete_failed": "Failed to delete product.",
-    "admin_no_orders_found": "No orders found.",
-    "admin_all_orders_title": "📦 All Customer Orders:\n\n",
-    "admin_order_details_format": "Order #{order_id} by {user_name} (ID: {user_id})\nDate: {date}, Total: {total:.2f} EUR, Status: {status}\nItems:\n{items}\n-------------------------------------\n",
-    "admin_shopping_list_empty": "Shopping list is empty (no pending/confirmed orders with items).",
-    "admin_shopping_list_title": "🛒 Poland Shopping List (Aggregated Totals):\n\n",
-    "admin_shopping_list_item_format": "- {name}: {total_quantity:.2f} kg\n",
-    "admin_panel_exit_message": "Exited admin panel."
-    "admin_new_order_notification_title": "🔔 New Order #{order_id} Received!",
-    "admin_order_from": "Order from: {name} (@{username}, ID: {customer_id})",
-    "admin_order_items_header": "Order Details:",
-    "admin_order_item_line_format": "{index}. {item_name}: {quantity} kg x {price_per_kg:.2f} EUR/kg = {item_subtotal:.2f} EUR",
-    "admin_order_grand_total": "Grand Total: {total_price:.2f} EUR"
-  }
+  "welcome_message": "Hi {user_mention}! Welcome to the Polish Veggies & Fruits Bot!",
+  "main_menu_title": "Main Menu:",
+  "browse_products_button": "🥕 Browse Products & Order",
+  "view_cart_button": "🛒 View Cart",
+  "my_orders_button": "📋 My Orders",
+  "set_language_button": "🌐 Change Language",
+  "back_button": "⬅️ Back",
+  "choose_language": "Please choose your language:",
+  "language_set_to": "Language set to {language_name}.",
+  "products_title": "Choose a product to add to your cart:",
+  "no_products_available": "Sorry, no products available at the moment. Check back later!",
+  "back_to_main_menu_button": "⬅️ Back to Main Menu",
+  "product_selected_prompt": "You selected: {product_name}. How many kg do you want? (e.g., 0.5, 1, 2.5)",
+  "invalid_quantity_prompt": "Invalid quantity. Please enter a positive number (e.g., 0.5, 1, 2.5).",
+  "item_added_to_cart": "{quantity} kg of {product_name} added to your cart.",
+  "what_next_prompt": "What would you like to do next?",
+  "add_more_products_button": "➕ Add More Products",
+  "view_cart_and_checkout_button": "🛒 View Cart & Checkout",
+  "cart_empty": "Your cart is empty.",
+  "your_cart_title": "🛒 Your Cart:",
+  "cart_total": "Total: {total_price:.2f} EUR",
+  "remove_item_button": "🗑️ Remove Item {item_index}",
+  "checkout_button": "✅ Checkout",
+  "order_placed_success": "✅ Order Placed!\nYour Order ID is: #{order_id}\nTotal: {total_price:.2f} EUR.\nWe will contact you regarding pickup/delivery details. Thank you!",
+  "order_placed_error": "Sorry, there was an error placing your order. Please try again.",
+  "my_orders_title": "📋 Your Orders:",
+  "no_orders_yet": "You have no past orders.",
+  "order_details_format": "Order #{order_id} ({date})\nStatus: {status}\nTotal: {total:.2f} EUR\nItems: {items}\n\n",
+  "item_removed_from_cart": "Removed {item_name} from your cart.",
+  "invalid_item_to_remove": "Invalid item to remove.",
+  "action_cancelled": "Action cancelled.",
+  "generic_error_message": "An unexpected error occurred. Please try again or contact support.",
+  "product_not_found": "Sorry, this product could not be found.",
+  "admin_unauthorized": "You are not authorized to access this section.",
+  "admin_panel_title": "Admin Panel:",
+  "admin_add_product_button": "➕ Add Product",
+  "admin_manage_products_button": "✏️ Manage Products",
+  "admin_view_orders_button": "📦 View All Orders",
+  "admin_shopping_list_button": "📊 Shopping List (Totals)",
+  "admin_exit_button": "⬅️ Exit Admin Panel (To Main Menu)",
+  "admin_enter_product_name": "Enter the name of the new product:",
+  "admin_enter_product_price": "Product name: {product_name}.\nNow enter its price per kg (e.g., 2.99):",
+  "admin_invalid_price": "Invalid price. Please enter a positive number (e.g., 2.99).",
+  "admin_product_added": "Product '{product_name}' added with price {price:.2f} EUR/kg.",
+  "admin_product_add_failed": "Failed to add product '{product_name}'. It might already exist or there was a database error.",
+  "admin_no_products_to_manage": "No products to manage yet.",
+  "admin_select_product_to_manage": "Select a product to manage:",
+  "admin_back_to_admin_panel_button": "⬅️ Back to Admin Panel",
+  "admin_managing_product": "Managing: {product_name}",
+  "admin_change_price_button": "Change Price ({price:.2f} EUR)",
+  "admin_set_unavailable_button": "Set Unavailable",
+  "admin_set_available_button": "Set Available",
+  "admin_delete_product_button": "❌ Delete Product",
+  "admin_back_to_product_list_button": "⬅️ Back to Product List",
+  "admin_product_not_found": "Product not found.",
+  "admin_enter_new_price": "Enter new price for {product_name} (current: {current_price:.2f} EUR/kg):",
+  "admin_price_updated": "Price updated for product ID {product_id}.",
+  "admin_price_update_failed": "Failed to update price for product ID {product_id}.",
+  "admin_status_available": "Available",
+  "admin_status_unavailable": "Unavailable",
+  "admin_status_available_text": "available",
+  "admin_status_unavailable_text": "unavailable",
+  "admin_product_set_status": "Product ID {product_id} set to {status_text}.",
+  "admin_status_update_failed": "Failed to update availability for product ID {product_id}.",
+  "admin_confirm_delete_prompt": "⚠️ Are you sure you want to delete '{product_name}'? This cannot be undone.",
+  "admin_confirm_delete_yes_button": "YES, Delete {product_name}",
+  "admin_confirm_delete_no_button": "NO, Cancel",
+  "admin_product_deleted": "Product ID {product_id} has been deleted.",
+  "admin_product_delete_failed": "Failed to delete product ID {product_id}.",
+  "admin_no_orders_found": "No orders found.",
+  "admin_all_orders_title": "📦 All Customer Orders:\n\n",
+  "admin_order_details_format": "Order #{order_id} by {user_name} (ID: {customer_id})\nDate: {date}, Total: {total:.2f} EUR, Status: {status}\nItems:\n{items}\n-------------------------------------\n",
+  "admin_shopping_list_empty": "Shopping list is empty (no pending/confirmed orders with items).",
+  "admin_shopping_list_title": "🛒 Poland Shopping List (Aggregated Totals):\n\n",
+  "admin_shopping_list_item_format": "- {name}: {total_quantity:.2f} kg\n",
+  "admin_panel_exit_message": "Exited admin panel. You are now in the main user menu.",
+  "admin_new_order_notification_title": "🔔 New Order #{order_id} Received!",
+  "admin_order_from": "Order from: {name} (@{username}, ID: {customer_id})",
+  "admin_order_items_header": "Order Details:",
+  "admin_order_item_line_format": "{index}. {item_name}: {quantity} kg x {price_per_kg:.2f} EUR/kg = {item_subtotal:.2f} EUR",
+  "admin_order_grand_total": "Grand Total: {total_price:.2f} EUR"
+}
